Fixed z-index of overlays

--- a/openbudget/commons/static/css/partials/ltr/modals.less
+++ b/openbudget/commons/static/css/partials/ltr/modals.less
@@ -11,7 +11,7 @@
     .height(100%);
     .background-color(@black);
     opacity: 0.5;
-    z-index: 1;
+    z-index: 1001;
 }
 
 /* A mixin that declares the base style of all overlay objects */
@@ -23,7 +23,7 @@
     .display(none);
     .margin-all(auto);
     .background-color(@modal);
-    z-index: 2;
+    z-index: 1002;
 
     h3, .notices, .options {
         .padding-horizontal(20px);
